# AEC3

./: CMakeLists.txt  README.md  build_all_platforms.sh  build_windows.bat  simd_stubs.cc
api/: aec3_api.cc  aec3_api.h  build_config.h
cmake/: AEC3Config.cmake.in
csharp/: AEC3Native.cs  AEC3Processor.cs  AEC3Wrapper.csproj  Example.cs  README.md  WAV_file.cs  build_and_run.sh
demo/: CMakeLists.txt  build.sh  demo.cc
install/macos-arm64/include/: aec3_api.h
install/macos-arm64/lib/cmake/aec/: aecConfig.cmake  aecTargets.cmake
install/macos-x86_64/lib/: aec3.dylib
install/macos-x86_64/lib/cmake/aec/: aecTargets-release.cmake
install/macos/lib/: aec3.dylib
install/macos/lib/cmake/aec/: aecTargets-release.cmake  aecTargets.cmake
